oss/argocd/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
  name: contour
spec:
  controller: projectcontour.io/ingress-controller
