oss/argocd/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-grpc
  namespace: argocd
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    projectcontour.io/upstream-protocol.h2c: "8080"
spec:
  tls:
  - hosts:
      - argocd.tanzu.lab
    secretName: argocd-tls
  rules:
  - host: grpc.argocd.tanzu.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080

# argocd-ingress.yaml
